# Akagoria

./: CMakeLists.txt  README.md  akagoria.cc
akgr/: PhysicsModel.cc  PhysicsModel.h  Singletons.cc  Singletons.h
cmake/Modules/: FindL10N.cmake  GettextHandling.cmake
code/: CMakeLists.txt  akagoria.cc  akagoria_dialog_validator.cc  config.h.in
code/akgr/: Body.cc  Body.h  Character.cc  Character.h  Data.h  DataManager.cc  DataManager.h  DialogManager.cc  DialogManager.h  DialogueManager.cc  DialogueManager.h  FloorTracker.cc  FloorTracker.h  GameDriver.cc  GameDriver.h  GameEvents.h  GridMap.cc  GridMap.h  Hero.cc  Hero.h  HeroAttributes.cc  HeroAttributes.h  Location.h  MapEvents.h  Maths.h  MessageManager.cc  MessageManager.h  PhysicsModel.cc  PhysicsModel.h  RequirementManager.cc  RequirementManager.h  SavePointManager.cc  SavePointManager.h  ShrineManager.cc  ShrineManager.h  ShrineParticles.cc  ShrineParticles.h  Singletons.cc  Singletons.h  SpriteMap.cc  (+9 more)
data/akagoria/data/: collisions.yml  dialogues.yml  items.yml  messages.yml  sprites.yml
data/akagoria/l10n/: CMakeLists.txt  akagoria.pot  fr.po  fr.po~
data/akagoria/maps/: map.tmx
